add Google website translator

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -40,6 +40,7 @@ layout: default
 <article>
     <div class="container">
         <div class="row">
+            <div id="google_translate_element" style="float: right;"></div>
 
     <!-- Post Container -->
             <div class="
