--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -64,6 +64,8 @@ layout: default
 
 <!-- USE SIDEBAR -->
     <!-- Post Container -->
+            <div id="google_translate_element" style="float: right;"></div>
+
     		<div class="
                 col-lg-8 col-lg-offset-1
                 col-md-8 col-md-offset-1
