--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -22,34 +22,22 @@
             <div class="navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="{{ site.baseurl }}/">Home</a>
+                        <a href="{{ site.baseurl }}/">主页</a>
                     </li>
                     <li>
-                        <a href="http://journey.piasy.com/">真经</a>
+                        <a href="{{ site.baseurl }}/AdvancedRxJava/">RxJava</a>
                     </li>
                     <li>
-                        <a href="/effective/">Effective</a>
+                        <a href="{{ site.baseurl }}/archive">全部文章</a>
                     </li>
                     <li>
-                        <a href="/AdvancedRxJava/">RxJava</a>
+                        <a href="{{ site.baseurl }}/about/">关于我</a>
                     </li>
                     <li>
-                        <a href="/moments/">时刻</a>
+                        <a href="{{ site.baseurl }}/tags/">标签</a>
                     </li>
                     <li>
-                        <a href="{{ site.baseurl }}/books">Books</a>
-                    </li>
-                    <li>
-                        <a href="{{ site.baseurl }}/archive">Archive</a>
-                    </li>
-                    <li>
-                        <a href="/about/">About</a>
-                    </li>
-                    <li>
-                        <a href="/resume/">简历</a>
-                    </li>
-                    <li>
-                        <a href="/tags/">Tags</a>
+                        <a href="{{ site.baseurl }}/interesting/">有点意思</a>
                     </li>
                 </ul>
             </div>
