introduce ads of 100offer

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -79,6 +79,15 @@ layout: default
                 <!-- 多说 Share end-->
                 {% endif %}
 
+                <b>下面是赞助商 100offer 的广告：</b>
+
+                <p>优秀人才不缺工作机会，只缺适合自己的好机会。但是他们往往没有精力从海量机会中找到最适合的那个。</p>
+
+                <p>100offer 会对平台上的人才和企业进行严格筛选，让「最好的人才」和「最好的公司」相遇。</p>
+
+                <p>注册 100offer，谈谈你对下一份工作的期待。一周内，收到 5-10 个满足你要求的好机会！</p>
+
+                <a href="https://cn.100offer.com/how-it-works/?utm_source=piasy&utm_medium=display&utm_campaign=piasy_20170210&utm_content=find_new_job&campaign_code=piasy"><img src="/img/logo_100offer.png"/></a>
 
                 <ul class="pager">
                     {% if page.previous.url %}
