update NAV, update NDK guide

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -28,6 +28,9 @@
                         <a href="{{ site.baseurl }}/AdvancedRxJava/">RxJava</a>
                     </li>
                     <li>
+                        <a href="https://xiaozhuanlan.com/u/1338552356">Piasy 的小专栏</a>
+                    </li>
+                    <li>
                         <a href="{{ site.baseurl }}/archive/">全部文章</a>
                     </li>
                     <li>
