--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="{{ "/css/hux-blog.min.css" | prepend: site.baseurl }}">
 
     <!-- Pygments Github CSS -->
-    <link rel="stylesheet" href="{{ "/css/syntax.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "/css/autumn.css" | prepend: site.baseurl }}">
 
     <link href="/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
