--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -9,7 +9,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{{ site.baseurl }}/">{{ site.title }}</a>
+            <a class="navbar-brand" href="{{ site.baseurl }}/index.html">{{ site.title }}</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -22,25 +22,25 @@
             <div class="navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="{{ site.baseurl }}/">主页</a>
+                        <a href="{{ site.baseurl }}/index.html">主页</a>
                     </li>
                     <li>
-                        <a href="{{ site.baseurl }}/AdvancedRxJava/">RxJava</a>
+                        <a href="{{ site.baseurl }}/AdvancedRxJava/index.html">RxJava</a>
                     </li>
                     <li>
                         <a href="https://xiaozhuanlan.com/u/1338552356">Piasy 的小专栏</a>
                     </li>
                     <li>
-                        <a href="{{ site.baseurl }}/archive/">全部文章</a>
+                        <a href="{{ site.baseurl }}/archive/index.html">全部文章</a>
                     </li>
                     <li>
-                        <a href="{{ site.baseurl }}/about/">关于我</a>
+                        <a href="{{ site.baseurl }}/about/index.html">关于我</a>
                     </li>
                     <li>
-                        <a href="{{ site.baseurl }}/tags/">标签</a>
+                        <a href="{{ site.baseurl }}/tags/index.html">标签</a>
                     </li>
                     <li>
-                        <a href="{{ site.baseurl }}/interesting/">有点意思</a>
+                        <a href="{{ site.baseurl }}/interesting/index.html">有点意思</a>
                     </li>
                 </ul>
             </div>
