--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -36,11 +36,11 @@ layout: default
                 {% if site.featured-tags %}
                 <section>
                     <!-- no hr -->
-                    <h5><a href="{{ site.baseurl }}/tags/">FEATURED TAGS</a></h5>
+                    <h5><a href="{{ site.baseurl }}/tags/index.html">FEATURED TAGS</a></h5>
                     <div class="tags">
         				{% for tag in site.tags %}
                             {% if tag[1].size > site.featured-condition-size %}
-                				<a href="{{ site.baseurl }}/tags/#{{ tag[0] }}" title="{{ tag[0] }}" rel="{{ tag[1].size }}">
+                				<a href="{{ site.baseurl }}/tags/index.html#{{ tag[0] }}" title="{{ tag[0] }}" rel="{{ tag[1].size }}">
                                     {{ tag[0] }}
                                 </a>
                             {% endif %}
@@ -87,11 +87,11 @@ layout: default
                 {% if site.featured-tags %}
                 <section>
                     <hr class="hidden-sm hidden-xs">
-                    <h5><a href="{{ site.baseurl }}/tags/">FEATURED TAGS</a></h5>
+                    <h5><a href="{{ site.baseurl }}/tags/index.html">FEATURED TAGS</a></h5>
                     <div class="tags">
                         {% for tag in site.tags %}
                             {% if tag[1].size > site.featured-condition-size %}
-                                <a href="{{ site.baseurl }}/tags/#{{ tag[0] }}" title="{{ tag[0] }}" rel="{{ tag[1].size }}">
+                                <a href="{{ site.baseurl }}/tags/index.html#{{ tag[0] }}" title="{{ tag[0] }}" rel="{{ tag[1].size }}">
                                     {{ tag[0] }}
                                 </a>
                             {% endif %}
@@ -102,10 +102,10 @@ layout: default
 
                 <!-- Short About -->
                 <section class="visible-md visible-lg">
-                    <hr><h5><a href="{{ site.baseurl }}/about/">ABOUT ME</a></h5>
+                    <hr><h5><a href="{{ site.baseurl }}/about/index.html">ABOUT ME</a></h5>
                     <div class="short-about">
                         {% if site.sidebar-avatar %}
-                            <a href="{{ site.baseurl }}/about/">
+                            <a href="{{ site.baseurl }}/about/index.html">
                                 <img src="{{site.sidebar-avatar}}" />
                             </a>
                         {% endif %}
@@ -164,17 +164,6 @@ layout: default
                                     <span class="fa-stack fa-lg">
                                         <i class="fa fa-circle fa-stack-2x"></i>
                                         <i class="fa fa-stack-overflow fa-stack-1x fa-inverse"></i>
-                                    </span>
-                                </a>
-                            </li>
-                            {% endif %}
-                            
-                            {% if site.footer-links.googleplus %}
-                            <li>
-                                <a target="_blank" href="https://plus.google.com/{{ site.footer-links.googleplus }}">
-                                    <span class="fa-stack fa-lg">
-                                        <i class="fa fa-circle fa-stack-2x"></i>
-                                        <i class="fa fa-google-plus-square fa-stack-1x fa-inverse"></i>
                                     </span>
                                 </a>
                             </li>
